--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,10 +14,13 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <string name="login_title_text">Login to the app</string>
+    <string name="login_title_text">LOGIN TO PROCEED</string>
     <string name="or">OR</string>
     <string name="sign_in_with_google">Sign in with Google</string>
     <string name="sign_in_with_facebook">Sign in with Facebook</string>
     <string name="signup_text">New here? Sign up!</string>
     <string name="forgot_password">Forgot Password?</string>
+    <string name="google_icon">Google Icon</string>
+    <string name="facebook_icon">Facebook Icon</string>
+    <string name="twitter_icon">Twitter Icon</string>
 </resources>
