--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,8 @@
     <string name="enter_contact_number">Enter Contact Number</string>
     <string name="we_never_share_these_details_without_your_permission">We never share these details without your permission.</string>
     <string name="next">Next</string>
+
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
