--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,16 @@
     <string name="enter_contact_number">Enter Contact Number</string>
     <string name="we_never_share_these_details_without_your_permission">We never share these details without your permission.</string>
     <string name="next">Next</string>
+    <string name="add_course_details">Add Course Details.</string>
+    <string name="course_name">Course Name</string>
+    <string name="course_description">Course Description</string>
+    <string name="course_duration">Course Duration</string>
+    <string name="class_hours">Class Hours</string>
+    <string name="online">ONLINE</string>
+    <string name="offline">OFFLINE</string>
+    <string name="grouped_classes">Grouped Classes</string>
+    <string name="individual">Individual</string>
+    <string name="number_of_batches">Number of batches</string>
+    <string name="teach_for_free">Teach for free</string>
+    <string name="charge_a_fee">Charge a fee</string>
 </resources>
