updated view course page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,12 @@
     <string name="your_active_courses">Your Active Courses.</string>
     <string name="your_time_with_us">Your Time With Us</string>
     <string name="add_new_course">Add a new course</string>
+
+    <string name="temp_course_details">
+        Instructor - Mr. Unknown Someone
+        \nCourse Duration - 70 hours
+        \nFees - ₹ 1100 /-
+        \n
+        \nInstructor Details - Instructor is a well known... and an expert on... bla bla something...
+    </string>
 </resources>
