Customised Location Icons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="your_name_and_photo_will_be_visible_to_your_teachers">Your name and photo will be visible to your teachers</string>
     <string name="personalize_your_learning">Personalize your learning.</string>
     <string name="enter_pincode">Enter Pincode</string>
-    <string name="use_google_maps">Use Google Maps</string>
+    <string name="use_phone_location">Use Phone Location</string>
     <string name="enter_city">Enter City</string>
     <string name="why_should_i_share_my_location">Why should I share my location?</string>
     <string name="enter_contact_number">Enter Contact Number</string>
