--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,7 +58,7 @@
     <string name="next">Next</string>
 
     
-    <string name="add_course_details">Add Course Details.</string>
+    <string name="add_course_details">Add Course Details</string>
     <string name="course_name">Course Name</string>
     <string name="course_description">Course Description</string>
     <string name="course_duration">Course Duration</string>
