--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,4 +89,5 @@
     <string name="register">Register</string>
     <string name="enter_you_street_address">Enter you street address</string>
     <string name="selected_course">Selected Course</string>
+    <string name="proceed_to_pay">Proceed to Pay</string>
 </resources>
