added action bar for courses taught page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,7 +74,7 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="teach_at_upsilon">Teach At Upsilon.</string>
+    <string name="teach_at_upsilon">Teach At Upsilon</string>
     <string name="your_active_courses">Your Active Courses.</string>
     <string name="your_time_with_us">Your Time With Us</string>
     <string name="add_new_course">Add a new course</string>
