added edit profile page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,5 @@
     <string name="phone">Phone</string>
     <string name="number_of_courses_taught">Number of Courses Taught</string>
     <string name="your_profile">Your Profile</string>
+    <string name="edit_your_profile">Edit Your Profile</string>
 </resources>
