updated user data (added college field)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,5 @@
     <string name="number_of_courses_taught">Number of Courses Taught</string>
     <string name="your_profile">Your Profile</string>
     <string name="edit_your_profile">Edit Your Profile</string>
+    <string name="add_interest">Add Interest</string>
 </resources>
