corrected action bar view course

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,5 @@
     <string name="your_profile">Your Profile</string>
     <string name="edit_your_profile">Edit Your Profile</string>
     <string name="add_interest">Add Interest</string>
+    <string name="select_your_college">Select Your College</string>
 </resources>
