Added Support For Courses By Same College People

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="already_a_member">Already a member ?</string>
     <string name="resume_learning">Resume Learning</string>
-    <string name="recommended_for_you">Recommended for you</string>
+    <string name="recommended_for_you">Courses By Your Colleagues And Seniors</string>
     <string name="explore">Explore</string>
 
     <string name="server_client_id">374851941944-mte178498m02ggiej5lf18on6rabl4qs.apps.googleusercontent.com</string>
