--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,4 +108,5 @@
     <string name="notifications">Notifications</string>
     <string name="resources">Resources</string>
     <string name="write_a_review">Write a review</string>
+    <string name="prompt_fees">Enter fees you wish to charge</string>
 </resources>
