Forum Successfully Incorporated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,4 +114,5 @@
     <string name="enter_course_rating">Enter course rating (out of 5)</string>
     <string name="submit_review">Submit Review</string>
     <string name="free">Free</string>
+    <string name="Forum">Forum</string>
 </resources>
