--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,4 +115,5 @@
     <string name="submit_review">Submit Review</string>
     <string name="free">Free</string>
     <string name="Forum">Forum</string>
+    <string name="type_a_message">Type a message</string>
 </resources>
