--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,4 +116,5 @@
     <string name="free">Free</string>
     <string name="Forum">Forum</string>
     <string name="type_a_message">Type a message</string>
+    <string name="refresh">Refresh</string>
 </resources>
