--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,4 +119,13 @@
     <string name="refresh">Refresh</string>
     <string name="view_your_profile">View Your Profile</string>
     <string name="teach_a_new_course">Teach a new course</string>
+    <string name="add_video">Add Video</string>
+    <string name="add_image">Add Image</string>
+    <string name="add_document">Add Document</string>
+    <string name="upload_and_proceed">Upload and Proceed</string>
+    <string name="amount_once_deducted_can_be_refunded_only_within_one_week_of_payment">Amount once deducted can be refunded only within one week of payment.</string>
+    <string name="info_about_course_instructor">Info about course instructor</string>
+    <string name="see_location_of_offline_course">See Location of offline course</string>
+    <string name="reviews">Reviews</string>
+    <string name="register_now">Register Now!</string>
 </resources>
