updated class scheduling layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,4 +132,5 @@
     <string name="update_link">Update Link</string>
     <string name="schedule_class">Schedule Class</string>
     <string name="accept_new_registrations">Accept New Registrations</string>
+    <string name="schedule">Schedule</string>
 </resources>
