--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,4 +151,6 @@
 </i>
     </string>
     <string name="faq">FAQ</string>
+    <string name="course_location">Course Location</string>
+    <string name="course_fee">Course Fee</string>
 </resources>
