--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,5 +158,11 @@
     <string-array name="categories">
         <item>Science</item>
         <item>Arts</item>
+        <item>Coding</item>
+        <item>Photography</item>
+        <item>Language</item>
+        <item>Music</item>
+        <item>Dance</item>
+        <item>Commerce</item>
     </string-array>
 </resources>
