--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -155,6 +155,9 @@
     <string name="course_fee">Course Fee</string>
     <string name="course_duration_hrs">Course Duration (hrs)</string>
     <string name="settings">Settings</string>
+    <string name="about_us">About Us</string>
+    <string name="contact_us">Contact us</string>
+    <string name="more">More</string>
     <string-array name="categories">
         <item>Science</item>
         <item>Arts</item>
