--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,6 +158,9 @@
     <string name="about_us">About Us</string>
     <string name="contact_us">Contact us</string>
     <string name="more">More</string>
+    <string name="add_course_location">Add Course Location</string>
+    <string name="enter_class_name">Enter Class Name</string>
+    <string name="set">Set</string>
     <string-array name="categories">
         <item>Science</item>
         <item>Arts</item>
