--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,6 +161,10 @@
     <string name="add_course_location">Add Course Location</string>
     <string name="enter_class_name">Enter Class Name</string>
     <string name="set">Set</string>
+    <string name="no_location_data_provided">No Location Data Provided</string>
+    <string name="service_not_available">Service Not Available</string>
+    <string name="invalid_lat_long_used">Invalid Lat Long Used</string>
+    <string name="no_address_found">No Address Found</string>
     <string-array name="categories">
         <item>Science</item>
         <item>Arts</item>
