--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -194,4 +194,6 @@
     <string name="hello_world">Hello Square World!</string>
     <string name="see_more">SEE MORE</string>
     <string name="error_not_enabled_location">You have not enabled location services of the app</string>
+    <string name="please_wait">Please wait...</string>
+    <string name="estimating_course_location_please_wait">Estimating course location, please wait...</string>
 </resources>
