Bug fixes sorted Made changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,7 +81,7 @@
 
     <string name="temp_course_details">T</string>
     <string name="register">Register</string>
-    <string name="enter_you_street_address">Enter you street address</string>
+    <string name="enter_your_pincode">Enter your pincode</string>
     <string name="selected_course">Selected Course</string>
     <string name="proceed_to_pay">Proceed to Pay</string>
     <string name="home">HOME</string>
