--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -200,4 +200,5 @@
     <string name="enter_a_message">Enter a message</string>
     <string name="post">Post</string>
     <string name="cancel">Cancel</string>
+    <string name="edit_profile">Edit Profile</string>
 </resources>
