--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -255,4 +255,6 @@
     <string name="content">Content</string>
     <string name="submission">Submission</string>
     <string name="grade">Grade</string>
+    <string name="assignments_and_tests">Assignments And Tests</string>
+    <string name="drop_the_course">Drop the course</string>
 </resources>
