--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="sign_in_with_google">Sign in with Google</string>
     <string name="sign_in_with_facebook">Sign in with Facebook</string>
     <string name="signup_text">
-        New here? <font color="#003153"><u>Create an account!</u></font>
+        New here? <font color="#B0003153"><u>Create an account!</u></font>
     </string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="google_icon">Google Icon</string>
@@ -71,7 +71,7 @@
     <string name="sign_up_text">SIGN UP</string>
     <string name="username">Username</string>
     <string name="confirm_password">Confirm Password</string>
-    <string name="already_a_member">Already a member ?</string>
+    <string name="already_a_member">Already a member ? Log in</string>
     <string name="resume_learning">Resume Learning</string>
     <string name="recommended_for_you">Courses By Your Colleagues And Seniors</string>
     <string name="explore">Explore</string>
@@ -271,4 +271,8 @@
     <string name="student_performance_stats">Student Performance Stats</string>
     <string name="view_payments_history">View Payments History</string>
     <string name="view_course_reviews">View Course Reviews</string>
+    <string name="acceptance_terms_and_conditions">
+        I accept the
+<!--        <font color="#A0003153"><u> Terms and Conditions </u></font>-->
+</string>
 </resources>
